JEDIT 4.2 VERSION HISTORY

{{{ Version 4.2pre2

{{{ User Interface

- The Global Options dialog box has been rearranged a little. There are
  two new panes, Autosave & Backup, and View. The Loading & Saving pane
  has been removed.

}}}
{{{ Plugin Loader

- The plugin manager now loads plugins immediately after they are
  installed, and unloads plugins when removing and updating. Note that
  plugins not updated for the 4.2 API might not fully load.

- Added an option to Global Options->Plugin Manager to leave the
  downloaded ZIP archives in ~/.jedit/PluginManager.download.

- If a plugin failed to load, its actions, dockables, etc are no longer
  visible from the UI.

}}}
{{{ Scripting Changes

- BeanShell 1.3a1 included. This release features improved error
  reporting, code cleanups and minor bug fixes.

}}}
{{{ Bug Fixes

- It was possible to open multiple plugin manager instances from the
  "Plugin Error" dialog box.

- Fixed selection issue when right-clicking on a file system browser
  window.

- The file system browser would report files larger than 1 megabyte as
  being an order of magnitude smaller, eg 13 kilobytes instead of 13
  megabytes.

- Changing the folding mode to "none" did not work correctly.

- Changing from a syntax highlighting mode to text mode did not
  invalidate line contexts.

- The file system browser's "Open in" menu didn't work.

- Toggle menu items did not show up as such when a plugin was
  constructed from the summary cache.

- -nobackground command-line switch did not actually work.

- Title bar "modified" indicator was not displayed for recovered
  autosave files.

- jEdit never closed streams of XML files being read in. This bug has
  been there for ages, however its not too major since the stream
  objects would get garbage collected and closed eventually.

- Fixed incorrect handling of buffer modification flag in undo code.

}}}
{{{ API Changes

- Added a new dynamic menu API, so that plugins using the 4.2 plugin API